user-apps/external/pihole/endpoint.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: pihole
  namespace: pihole
  labels:
    kubernetes.io/service-name: pihole
    endpointslice.kubernetes.io/managed-by: argocd
    git-managed-inclusion: "true"
addressType: FQDN
endpoints:
  - addresses: 
      - pihole.home.arpa
    conditions:
      ready: true

ports:
  - name: http
    port: 80
    protocol: TCP
