user-apps/external/pihole/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole
  namespace: pihole
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: gateway
  hostnames:
    - "pihole.tamhomelab.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              replacePrefixMatch: /admin/
      backendRefs: [] # No backend for redirect-only rule

    - matches:
        - path:
            type: PathPrefix
            value: /admin/
      backendRefs:
        - name: pihole
          port: 80

    - matches:
        - path:
            type: PathPrefix
            value: /api/
      backendRefs:
        - name: pihole
          port: 80
